--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -5,24 +7,73 @@
 }
 
 body{
-    height: 400vh;
-    width: auto;
+    height: 1080px;
+    width: 1920px;
+    display: flex;
+    flex-direction: column;
+    background-image: url(./img/partitura.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
 }
 
 main{
-    height: 300vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: auto;
     width: auto;
-    background-color: antiquewhite;
+}
+h1{
+    font-size: 50px;
+    font-family: "Fredericka the Great";
+    color: rgb(255, 63, 63);
+}
+p{
+    color: rgb(156, 167, 177);
 }
 .partitura{
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
+    border-radius: 20px;
+}
+.partitura:hover{
+    box-shadow: 7px 5px 5px black ;
+    transition: 0.5s;
 }
 .piano{
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
+    border-radius: 20px;
+    
 }
-.claveSol{
-    height: 75px;
-    width: 50px;
+.piano:hover {
+    box-shadow: 7px 5px 5px black ;
+    transition: 0.5s;
 }
+.titulo {
+    display: flex;
+    align-items: center ;
+    flex-direction: column;
+    height: auto;
+    padding-block: 50px;
+}
+
+.elementos{
+    display: flex;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    gap: 300px;
+}
+footer{
+    display: flex;
+    height: auto;
+    width: auto;
+    justify-content: center;
+ 
+}
+
